syntax = "proto3";

package calculator.div;

option go_package = "divpb";

service DivService {
    rpc Compute(OperationRequest) returns (OperationResponse);
}

message OperationRequest {
    double a = 1;
    double b = 2;
}

message OperationResponse {
    double result = 1;
}
