syntax = "proto3";

package calculator.mul;

option go_package = "mulpb";

service MulService {
    rpc Compute(OperationRequest) returns (OperationResponse);
}

message OperationRequest {
    double a = 1;
    double b = 2;
}

message OperationResponse {
    double result = 1;
}
